Project_6/security.tf
# Create Security Group - SSH Traffic and other ports
resource "aws_security_group" "web-traffic" {
  name   = "My_Security_Group"
  vpc_id = aws_vpc.myvpc.id

  dynamic "ingress" {
    iterator = port
    for_each = var.ingressrules
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "TCP"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  dynamic "egress" {
    iterator = port
    for_each = var.egressrules
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "TCP"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  tags = {
    "Name" = "My_SG"
  }
}
